test/Fail/Issue6006.err
Issue6006.agda:21.13-14: warning: -W[no]RewriteContainsUnsolvedMetaVariables
r  is not a legal rewrite rule, since it contains the unsolved meta variable(s) _10
when checking the pragma REWRITE r
Issue6006.agda:16.7-8: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue6006.agda:16.7-8
